# amlich

./: .gitignore  CLI-QUICKREF.md  Cargo.toml  HOW-TO-PUBLISH.txt  LICENSE  PHASE1-COMPLETE.md  PHASE1-MONOREPO-COMPLETE.md  PHASE2-COMPLETE.md  PHASE3-COMPLETE.md  PHASE3-SUMMARY.md  QUICKREF.txt  QUICKSTART.md  README-EXPERT.md  README.md  STATUS.md  STATUS.txt  SUMMARY-PHASE2.txt  SUMMARY.txt  app.js  demo-phase3.sh  demo.sh  index.html  index.js  justfile  package.json  test.js  vietnamese-holidays-browser.js
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: gsd-file-manifest.json
.github/workflows/: ci.yml  pages.yml  release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
app/src-tauri/: Cargo.toml
app/src-tauri/src/: lib.rs
app/src/routes/: +page.svelte
apps/desktop/: README.md  package.json  pnpm-lock.yaml  vite.config.js
apps/desktop/src/: app.css
apps/desktop/src-tauri/: Cargo.toml  amlich.desktop  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/lib/: updater.ts
apps/desktop/src/lib/components/: CulturalContentBox.svelte  DateInsightBox.svelte  SettingsPanel.svelte  ZodiacClock.svelte
apps/desktop/src/lib/cultural/: cultural-engine.ts
apps/desktop/src/lib/insights/: date-insight-engine.ts  shared-data.ts  types.ts
apps/desktop/src/lib/insights/data/: festivals.json  national-holidays.json  tiet-khi.json
apps/desktop/src/lib/insights/domain/: selectors.ts
apps/desktop/src/lib/insights/presenters/: category-ui.ts  insight-builder.ts
apps/desktop/src/lib/insights/types/: domain.ts  index.ts  insight-dto.ts  view.ts
apps/desktop/src/lib/stores/: settings.svelte.ts
apps/desktop/src/routes/: +layout.svelte  +page.svelte
crates/amlich/: Cargo.toml
crates/amlich-api/: Cargo.toml
crates/amlich-api/src/: convert.rs  dto.rs  lib.rs
crates/amlich-api/tests/: almanac_contract.rs  golden_parity.rs  insight_parity.rs
crates/amlich-api/tests/fixtures/: day-info-golden.json
crates/amlich-cli/: Cargo.toml
crates/amlich-cli/src/: lib.rs  main.rs  waybar.rs
crates/amlich-cli/tests/: json_contract.rs
crates/amlich-core/: Cargo.toml
crates/amlich-core/data/almanac/: baseline.json
crates/amlich-core/src/: canchi.rs  gio_hoang_dao.rs  holiday_data.rs  holidays.rs  insight_data.rs  julian.rs  lib.rs  lunar.rs  sun.rs  tietkhi.rs  types.rs
crates/amlich-core/src/almanac/: calc.rs  data.rs  day_deity.rs  mod.rs  profile.rs  star.rs  taboo.rs  than_huong.rs  than_sat.rs  truc.rs  types.rs  xung_hop.rs
crates/amlich-core/tests/: almanac_golden.rs  ruleset_determinism.rs  taboo_boundary.rs
crates/amlich-presenter/: Cargo.toml
crates/amlich-presenter/src/: lib.rs
crates/amlich-tui/: Cargo.toml
crates/amlich-tui/src/: app.rs  bookmark_store.rs  date_jump.rs  event.rs  history.rs  lib.rs  main.rs  search.rs  theme.rs  ui.rs
crates/amlich-tui/src/widgets/: bookmarks.rs  calendar.rs  date_jump.rs  detail.rs  help.rs  holidays.rs  hours.rs  insight.rs  insight_overlay.rs  mod.rs  search.rs
crates/amlich-wasm/: Cargo.toml  package.json
crates/amlich-wasm/src/: lib.rs
crates/amlich/src/: app.rs  dashboard.rs  event.rs  headless.rs  main.rs  theme.rs  tui_runtime.rs  ui.rs  waybar.rs
crates/amlich/src/widgets/: almanac_overlay.rs  bookmarks.rs  calendar.rs  date_jump.rs  help.rs  holidays.rs  info_panel.rs  insight_overlay.rs  mod.rs  search.rs
crates/amlich/tests/: cli_contract.rs
data/: README.md  canchi.json
data/holidays/: lunar-festivals.json  solar-holidays.json
data/schemas/: lunar-festivals.schema.json  solar-holidays.schema.json
docs/: migration-plan.md
docs/almanac/: day-deity-v1-table.md  day-hoangdao-hacdao.md  decision-log.md  glossary.md  known-differences.md  master-plan.md  research-gap-matrix.md  research-notes.md  research-sources.md  ruleset-baseline-field-catalog.md  ruleset-loader.md  ruleset-v1-scope.md  taboo-rules.md  taboo-v1-table-freeze.md
docs/almanac/beads/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  template.md
docs/plans/: 2026-02-24-almanac-source-alignment-impl.md  2026-02-24-amlich-core-almanac-expansion-impl.md  2026-02-24-tui-frontpage-insight-density-design.md  2026-02-24-tui-frontpage-insight-density-impl.md  2026-02-24-tui-redesign-design.md  2026-02-24-tui-redesign-impl.md  2026-02-24-weighted-guidance-implementation.md
engine/: canchi.js  index.js  test.js  types.js
patches/: waybar-config.patch  waybar-style.patch
scripts/: build-all.sh  build-desktop.sh  check-core-data-sync.sh  check-holiday-data.mjs  check-holiday-parity.mjs  install-cli.sh  install-desktop-local.sh  install_with_waybar.sh  macos-cleanup-desktop.sh  publish-crates.sh  publish-npm.sh
waybar/: README.md
waybar/modules/: amlich.jsonc
waybar/styles/: amlich.css
