[workspace]
resolver = "2"
members = [
    "crates/amlich-core",
    "crates/amlich-api",
    "crates/amlich-presenter",
    "crates/amlich-cli",
    "crates/amlich-tui",
    "crates/amlich-wasm",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Vietnamese Calendar Project"]
license = "MIT"
repository = "https://github.com/mnoyd/amlich"
homepage = "https://github.com/mnoyd/amlich"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
