[package]
name = "amlich-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Vietnamese Lunar Calendar - Shared headless query and formatting library"

[dependencies]
amlich-api = { path = "../amlich-api" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
