[package]
name = "amlich-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Vietnamese Lunar Calendar - WASM bindings"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
amlich-core = { path = "../amlich-core" }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
