[package]
name = "amlich-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unified AmLich binary with interactive TUI and headless query modes"

[[bin]]
name = "amlich"
path = "src/main.rs"

[dependencies]
amlich-api = { path = "../amlich-api", version = "0.1.2" }
amlich-core = { path = "../amlich-core", version = "0.1.2" }
clap = { version = "4.5", features = ["derive"] }
chrono = { workspace = true }
crossterm = "0.29"
ratatui = "0.30"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dirs = "5.0"
deunicode = "1.6.2"

[dev-dependencies]
serde_json = { workspace = true }
